3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Added GetMarkedItem to Python, cleaned compilation warnings.
 plugin/plugin_python.c
 plugin/include/plugin_python.h

Moved gps code to Python script, thus cleaning relevant code from server core.
 common/item.c: remove item description.
 include/define.h: remove gps define.
 server/apply.c: remove gps function.
Ryo 2005-10-08

Prevent objects from losing inventory when thrown.
include/libproto.h, common/object.c: Add new parameter "free_inventory" to
   free_object(). Is set, free inventory as well instead of dropping it on the
   ground.
common/object.c: In get_split_ob() prevent inventory of splitted object to be
   dropped.
Andreas Kirschbaum 2005-10-07

common/object.c: Use object_create_clone in get_split_ob; Fixes things inside
   of objects disappearing when throwing.
Alex Schultz 2005-10-7

Make damage done by area spells not depend on monster size.
include/sproto.h, server/attack.c: Add additional parameter "full_hit" to
   hit_map() and hit_player(). If set, do full damage, if unset scale down by
   monster size.
server/{apply.c, attack.c, disease.c, monster.c, player.c, rune.c,
spell_attack.c, spell_effect.c, spell_util.c, time.c}: Change callers to set
   "full_hit" parameter according to the attack used.
Andreas Kirschbaum 2005-10-07

common/{arch.c, object.c}, crossedit/{Attr.c, Defines.h, Edit.c},
include/libproto.h, server/{plugins.c, time.c}: Rename functions with
   mixed-case names to lower case only.
crossedit/Defines.h: Remove prototypes for nonexisting functions.
Andreas Kirschbaum 2005-10-07

server/apply.c: In prepare_weapon() do not lose a reference to the item name.
Andreas Kirschbaum 2005-10-06
